--- a/layout/fooseshoe/index.html
+++ b/layout/fooseshoe/index.html
@@ -110,7 +110,7 @@
 												<div class="product-buttons">
 													<a href="#"><i class="fa fa-eye"></i></a>
 													<a href="#"><i class="fa fa-star-o"></i></a>
-													<a href="#"><i class="fa fa-share"></i>
+													<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 													<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
 												</div>
@@ -132,7 +132,7 @@
 												<div class="product-buttons">
 													<a href="#"><i class="fa fa-eye"></i></a>
 													<a href="#"><i class="fa fa-star-o"></i></a>
-													<a href="#"><i class="fa fa-share"></i>
+													<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 													<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
 												</div>
@@ -154,7 +154,7 @@
 												<div class="product-buttons">
 													<a href="#"><i class="fa fa-eye"></i></a>
 													<a href="#"><i class="fa fa-star-o"></i></a>
-													<a href="#"><i class="fa fa-share"></i>
+													<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 													<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
 												</div>
@@ -176,7 +176,7 @@
 												<div class="product-buttons">
 													<a href="#"><i class="fa fa-eye"></i></a>
 													<a href="#"><i class="fa fa-star-o"></i></a>
-													<a href="#"><i class="fa fa-share"></i>
+													<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 													<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
 												</div>
@@ -198,7 +198,7 @@
 												<div class="product-buttons">
 													<a href="#"><i class="fa fa-eye"></i></a>
 													<a href="#"><i class="fa fa-star-o"></i></a>
-													<a href="#"><i class="fa fa-share"></i></a>
+													<a href="#"><i class="fa fa-share-alt"></i></a>
 													<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
 												</div>
 											</div>
@@ -276,12 +276,12 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="catalog-item catalog-item-1">
 									<div class="catalog-item-container">
-										<a href="#" class="popup-content"><img src="img/ar-it-1.jpg" alt="Shoes"></a>
+										<a href="#" class="popup-content"><img src="img/ar-it-1.JPG" alt="Shoes"></a>
 									</div>
 									<div class="catalog-item-name"><p>Kenneth Cole</p></div>
 									<div class="catalog-buttons">
 										<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
-										<a href="#"><i class="fa fa-share"></i>
+										<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 										<a href="#" class="popup-content"><i class="fa fa-eye"></i></a>
@@ -294,7 +294,7 @@
 												<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 												<h3>Kenneth Cole</h3>
 												<p>Impact evaluation based on randomized controlled trials (RCTs) offers a powerful tool that has fundamentally reshaped development economics by offering novel solutions to long-standing problems of weak causal identification.</p>
-												<img src="img/ar-it-1.jpg" alt="Alt" />
+												<img src="img/ar-it-1.JPG" alt="Alt" />
 												<a href="#" class="buy">Buy it</a>
 											</div>
 										</div>
@@ -305,12 +305,12 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="catalog-item catalog-item-2">
 									<div class="catalog-item-container">
-										<a href="#" class="popup-content"><img src="img/ar-it-2.jpg" alt="Shoes"></a>
+										<a href="#" class="popup-content"><img src="img/ar-it-2.JPG" alt="Shoes"></a>
 									</div>
 									<div class="catalog-item-name"><p>Diesel</p></div>
 									<div class="catalog-buttons">
 										<a href="#"><i class="fa fa-cart-arrow-down buy"></i></a>
-										<a href="#"><i class="fa fa-share"></i>
+										<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 										<a href="#" class="popup-content"><i class="fa fa-eye"></i></a>
@@ -324,7 +324,7 @@
 												<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 												<h3>Diesel</h3>
 												<p>Nonetheless, RCTs suffer important and underappreciated pitfalls, some of which are intrinsic to the method when applied to economic problems, others that are the result of methodological boosterism.</p>
-												<img src="img/ar-it-2.jpg" alt="Alt" />
+												<img src="img/ar-it-2.JPG" alt="Alt" />
 												<a href="#" class="buy">Buy it</a>
 											</div>
 										</div>
@@ -335,12 +335,12 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="catalog-item catalog-item-3">
 									<div class="catalog-item-container">
-										<a href="#" class="popup-content"><img src="img/ar-it-3.jpg" alt="Shoes"></a>
+										<a href="#" class="popup-content"><img src="img/ar-it-3.JPG" alt="Shoes"></a>
 									</div>
 									<div class="catalog-item-name"><p>Michael Kors</p></div>
 									<div class="catalog-buttons">
 										<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
-										<a href="#"><i class="fa fa-share"></i>
+										<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 										<a href="#" class="popup-content"><i class="fa fa-eye"></i></a>
@@ -353,7 +353,7 @@
 												<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 												<h3>Michael Kors</h3>
 												<p>I believe that a carbon tax could someday win bipartisan support.  But before it does so, those on the left will need to convince those on the right that the tax would be a tax shift, not a tax increase.</p>
-												<img src="img/ar-it-3.jpg" alt="Alt" />
+												<img src="img/ar-it-3.JPG" alt="Alt" />
 												<a href="#" class="buy">Buy it</a>
 											</div>
 										</div>
@@ -378,12 +378,12 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="catalog-item catalog-item-1">
 									<div class="catalog-item-container">
-										<a href="#" class="popup-content"><img src="img/sel-it-1.jpg" alt="Shoes"></a>
+										<a href="#" class="popup-content"><img src="img/sel-it-1.JPG" alt="Shoes"></a>
 									</div>
 									<div class="catalog-item-name"><p>Hugo Boss</p></div>
 									<div class="catalog-buttons">
 										<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
-										<a href="#"><i class="fa fa-share"></i>
+										<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 										<a href="#" class="popup-content"><i class="fa fa-eye"></i></a>
@@ -396,7 +396,7 @@
 												<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 												<h3>Hugo Boss</h3>
 												<p>The carbon tax needs to be evaluated on its own merits and should not be a stalking horse for a broader, big-government agenda. As a result, if you strongly believe in proposition 1 and are trying to put together a coalition to make it happen, marrying it to proposition 2 is not the best move.</p>
-												<img src="img/sel-it-1.jpg" alt="Alt" />
+												<img src="img/sel-it-1.JPG" alt="Alt" />
 												<a href="#" class="buy">Buy it</a>
 											</div>
 										</div>
@@ -407,12 +407,12 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="catalog-item catalog-item-2">
 									<div class="catalog-item-container">
-										<a href="#" class="popup-content"><img src="img/sel-it-2.jpg" alt="Shoes"></a>
+										<a href="#" class="popup-content"><img src="img/sel-it-2.JPG" alt="Shoes"></a>
 									</div>
 									<div class="catalog-item-name"><p>Roberto Cavalli</p></div>
 									<div class="catalog-buttons">
 										<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
-										<a href="#"><i class="fa fa-share"></i>
+										<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 										<a href="#" class="popup-content"><i class="fa fa-eye"></i></a>
@@ -425,7 +425,7 @@
 												<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 												<h3>Roberto Cavalli</h3>
 												<p>Unless it is politically profitable for the wrong people to do the right thing, the right people will not do the right thing either, or if they try, they will shortly be out of office.</p>
-												<img src="img/sel-it-2.jpg" alt="Alt" />
+												<img src="img/sel-it-2.JPG" alt="Alt" />
 												<a href="#" class="buy">Buy it</a>
 											</div>
 										</div>
@@ -436,12 +436,12 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="catalog-item catalog-item-3">
 									<div class="catalog-item-container">
-										<a href="#" class="popup-content"><img src="img/sel-it-3.jpg" alt="Shoes"></a>
+										<a href="#" class="popup-content"><img src="img/sel-it-3.JPG" alt="Shoes"></a>
 									</div>
 									<div class="catalog-item-name"><p>Tretorn</p></div>
 									<div class="catalog-buttons">
 										<a href="#"><i class="fa fa-cart-arrow-down"></i></a>
-										<a href="#"><i class="fa fa-share"></i>
+										<a href="#"><i class="fa fa-share-alt"></i>
 </a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 										<a href="#" class="popup-content"><i class="fa fa-eye"></i></a>
@@ -455,7 +455,7 @@
 												<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 												<h3>Tretorn</h3>
 												<p>Sen. Bernie Sanders, whose liberal call to action has propelled his long-shot presidential campaign, is proposing an array of new programs that would amount to the largest peacetime expansion of government in modern American history.</p>
-												<img src="img/sel-it-3.jpg" alt="Alt" />
+												<img src="img/sel-it-3.JPG" alt="Alt" />
 												<a href="#" class="buy">Buy it</a>
 											</div>
 										</div>
