--- a/layout/fooseshoe/css/sass/main.sass
+++ b/layout/fooseshoe/css/sass/main.sass
@@ -179,11 +179,12 @@ h4
 		margin: 20px 10px
 		a
 			padding: 10px
+			margin-left: 5px
+			&:nth-child(3)
+				padding: 10px 5px 10px 10px
+				margin-right: 4px
 			i
 				font-size: 20px
-				&:nth-child(2)
-					position: relative
-					top: 3px
 
 .slider-item-cost,
 .catalog-item-cost,
