--- a/layout/fooseshoe/index.html
+++ b/layout/fooseshoe/index.html
@@ -98,7 +98,7 @@
 					<div class="carousel">
 				    <div class="owl-carousel">
 				      <div class="slider-item">
-				      	<img src="img/sl-it-1.jpg">
+				      	<img src="img/sl-it-1.jpg" alt="SLide" />
 	      				<div class="slider-text">
 					      	<div class="container">
 					      		<div class="row">
@@ -120,7 +120,7 @@
 				      	</div>
 			      	</div>
 				      <div class="slider-item">
-				      	<img src="img/sl-it-2.jpg">
+				      	<img src="img/sl-it-2.jpg" alt="SLide" />
 				      	<div class="slider-text">
 					      	<div class="container">
 					      		<div class="row">
@@ -142,7 +142,7 @@
 				      	</div>
 			      	</div>
 				      <div class="slider-item">
-				      	<img src="img/sl-it-3.jpg">
+				      	<img src="img/sl-it-3.jpg" alt="SLide" />
 				      	<div class="slider-text">
 					      	<div class="container">
 					      		<div class="row">
@@ -164,7 +164,7 @@
 				      	</div>
 			      	</div>
 				      <div class="slider-item">
-				      	<img src="img/sl-it-4.jpg">
+				      	<img src="img/sl-it-4.jpg" alt="SLide" />
 				      	<div class="slider-text">
 					      	<div class="container">
 					      		<div class="row">
@@ -186,7 +186,7 @@
 				      	</div>
 			      	</div>
 				      <div class="slider-item">
-				      	<img src="img/sl-it-5.jpg">
+				      	<img src="img/sl-it-5.jpg" alt="SLide" />
 				      	<div class="slider-text">
 					      	<div class="container">
 					      		<div class="row">
