--- a/layout/carrental/index.html
+++ b/layout/carrental/index.html
@@ -51,7 +51,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-3">
+						<div class="col-md-4 col-sm-3 hidden-xs">
 							<div class="logo-wrapper">
 								<a href="#" class="logo"><img src="img/logo.png" alt="Прокат автомобилей в Санкт-Петербурге"></a>
 							</div>
