--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
 }
 
 a {
+	margin: 0 auto;
 	text-decoration: none;
 	color: rgba(255, 215, 0, .25);
-	margin: 0 auto;
 	-webkit-transition: .25s;
 	-o-transition: .25s;
 	transition: .25s;
@@ -76,16 +76,16 @@ td {
 	background-color: rgba(0, 0, 0, .25); /* Цвет фона ячеек */
 	text-align: center;
 	border: none;
-	/*border-radius: 0 25px;*/
+	border-radius: 10px;
 	overflow: hidden;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	-webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-	-ms-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-	-o-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 0 20px rgba(15, 15, 15, 0.75);
+	-moz-box-shadow: 0 0 20px rgba(15, 15, 15, 0.75);
+	-ms-box-shadow: 0 0 20px rgba(15, 15, 15, 0.75);
+	-o-box-shadow: 0 0 20px rgba(15, 15, 15, 0.75);
+	box-shadow: 0 0 20px rgba(15, 15, 15, 0.75);
 	-webkit-transition: all .35s ease-in-out;
 	-o-transition: all .35s ease-in-out;
 	transition: all .35s ease-in-out;
@@ -128,9 +128,9 @@ td .done {
 	-ms-transform: translateY(310px);
 	-o-transform: translateY(310px);
 	transform: translateY(310px);
-	-webkit-transition: all .35s ease-in-out;
-	-o-transition: all .35s ease-in-out;
-	transition: all .35s ease-in-out;
+	-webkit-transition: all .25s ease-in-out;
+	-o-transition: all .25s ease-in-out;
+	transition: all .25s ease-in-out;
 }
 
 .td-shadow p {
@@ -141,37 +141,34 @@ td .done {
 	-ms-transform: translateX(310px);
 	-o-transform: translateX(310px);
 	transform: translateX(310px);
-	-webkit-transition: all .4s ease-in-out .3s;
-	-o-transition: all .4s ease-in-out .3s;
-	transition: all .4s ease-in-out .3s;
+	-webkit-transition: all .3s ease-in-out .2s;
+	-o-transition: all .3s ease-in-out .2s;
+	transition: all .3s ease-in-out .2s;
 }
 
 .td-shadow .info-link {
+	width: 140px;
+	height: 35px;
 	display: inline-block;
 	position: absolute;
 	bottom: 20px;
 	left: 50%;
-	margin-left: -71px;
-	padding: 7px 30px;
-	font-size: 16px;
-	font-weight: bold;
+	margin-left: -70px;
+	border-radius: 3px;
+	font-size: 15px;
+	line-height: 35px;
 	text-transform: uppercase;
-	border-radius: 2px;
-	color: #191919;
-	background: #ddd;
+	box-shadow: inset 0 -3px 0 #c3c3c3;
+	color: #272727;
+	background: #f3f3f3;
 	opacity: 1;
 	-webkit-transform: translateX(-310px);
 	-ms-transform: translateX(-310px);
 	-o-transform: translateX(-310px);
 	transform: translateX(-310px);
-	-webkit-transition: all .25s ease-in-out;
-	-o-transition: all .25s ease-in-out;
-	transition: all .25s ease-in-out;
-}
-
-.td-shadow .info-link:hover {
-	background: #ccc;
-	opacity: .7;
+	-webkit-transition: all .15s ease-in-out;
+	-o-transition: all .15s ease-in-out;
+	transition: all .15s ease-in-out;
 }
 
 /*** Animation for portfolio elements ***/
@@ -193,9 +190,9 @@ td.got:hover > .td-shadow .info-link {
 	-ms-transform: translateX(0);
 	-o-transform: translateX(0);
 	transform: translateX(0);
-	-webkit-transition: all .3s ease-in-out .7s;
-	-o-transition: all .3s ease-in-out .7s;
-	transition: all .3s ease-in-out .7s;
+	-webkit-transition: all .2s ease-in-out .5s;
+	-o-transition: all .2s ease-in-out .5s;
+	transition: all .2s ease-in-out .5s;
 }
 
 /*** Images preview ***/
@@ -234,10 +231,11 @@ tr:nth-child(4) td:nth-child(2) {
 }
 
 .simple-line {
-	-webkit-box-shadow: 1px 1px 2px #000000;
-	box-shadow: 1px 1px 2px #000000;
-	height: 1px;
+	height: 2px;
 	margin-top: 50px;
+	-webkit-box-shadow: inset 0 -1px 0 #333;
+	box-shadow: inset 0 -1px 0 #333;
+	background-color: #ccc;
 }
 
 .contacts {
