Created a list of portfolio items

--- a/new/layout/footer.html
+++ b/new/layout/footer.html
@@ -1,4 +1,10 @@
 <footer class="page-footer">
-  Footer content
+  <div class="grid-container">
+    <div class="grid-100">
+      Footer content
+    </div>
+    <!-- grid -->
+  </div>
+  <!-- /.grid-container -->
 </footer>
 <!-- /.page-footer -->
