--- a/new/layout/header.html
+++ b/new/layout/header.html
@@ -1,4 +1,10 @@
 <header class="page-header">
-  Header content
+  <div class="grid-container">
+    <div class="grid-100">
+      Header content
+    </div>
+    <!-- grid -->
+  </div>
+  <!-- /.grid-container -->
 </header>
 <!-- /.page-header -->
