--- a/new/projects/sportshold/css/styles.css
+++ b/new/projects/sportshold/css/styles.css
@@ -311,24 +311,24 @@ body {
 	font-family: 'Trueno';
 	font-weight: 300;
 	font-style: normal;
-	src: url('./../fonts/Trueno/TruenoLight/TruenoLt.eot');
-	src: url('./../fonts/Trueno/TruenoLight/TruenoLt.eot?#iefix') format('embedded-opentype'), url('./../fonts/Trueno/TruenoLight/TruenoLt.woff') format('woff'), url('./../fonts/Trueno/TruenoLight/TruenoLt.ttf') format('truetype'), url('./../fonts/Trueno/TruenoLight/TruenoLt.svg#TruenoLt') format('svg');
+	src: url('../fonts/Trueno/TruenoLight/TruenoLt.eot');
+	src: url('../fonts/Trueno/TruenoLight/TruenoLt.eot?#iefix') format('embedded-opentype'), url('../fonts/Trueno/TruenoLight/TruenoLt.woff') format('woff'), url('../fonts/Trueno/TruenoLight/TruenoLt.ttf') format('truetype'), url('../fonts/Trueno/TruenoLight/TruenoLt.svg#TruenoLt') format('svg');
 }
 
 @font-face {
 	font-family: 'Trueno';
 	font-weight: 700;
 	font-style: normal;
-	src: url('./../fonts/Trueno/TruenoBold/TruenoBd.eot');
-	src: url('./../fonts/Trueno/TruenoBold/TruenoBd.eot?#iefix') format('embedded-opentype'), url('./../fonts/Trueno/TruenoBold/TruenoBd.woff') format('woff'), url('./../fonts/Trueno/TruenoBold/TruenoBd.ttf') format('truetype'), url('./../fonts/Trueno/TruenoBold/TruenoBd.svg#TruenoBd') format('svg');
+	src: url('../fonts/Trueno/TruenoBold/TruenoBd.eot');
+	src: url('../fonts/Trueno/TruenoBold/TruenoBd.eot?#iefix') format('embedded-opentype'), url('../fonts/Trueno/TruenoBold/TruenoBd.woff') format('woff'), url('../fonts/Trueno/TruenoBold/TruenoBd.ttf') format('truetype'), url('../fonts/Trueno/TruenoBold/TruenoBd.svg#TruenoBd') format('svg');
 }
 
 @font-face {
 	font-family: 'Trueno';
 	font-weight: 900;
 	font-style: normal;
-	src: url('./../fonts/Trueno/TruenoBlack/TruenoBlk.eot');
-	src: url('./../fonts/Trueno/TruenoBlack/TruenoBlk.eot?#iefix') format('embedded-opentype'), url('./../fonts/Trueno/TruenoBlack/TruenoBlk.woff') format('woff'), url('./../fonts/Trueno/TruenoBlack/TruenoBlk.ttf') format('truetype'), url('./../fonts/Trueno/TruenoBlack/TruenoBlk.svg#TruenoBlk') format('svg');
+	src: url('../fonts/Trueno/TruenoBlack/TruenoBlk.eot');
+	src: url('../fonts/Trueno/TruenoBlack/TruenoBlk.eot?#iefix') format('embedded-opentype'), url('../fonts/Trueno/TruenoBlack/TruenoBlk.woff') format('woff'), url('../fonts/Trueno/TruenoBlack/TruenoBlk.ttf') format('truetype'), url('../fonts/Trueno/TruenoBlack/TruenoBlk.svg#TruenoBlk') format('svg');
 }
 
 /* Typography */
@@ -2801,7 +2801,7 @@ a:hover {
 	clip: rect(0, 0, 0, 0);
 }
 .rating input:checked ~ label {
-	background: transparent url(./../images/icons/icon-star-checked.svg) no-repeat 50% 50%;
+	background: transparent url(../images/icons/icon-star-checked.svg) no-repeat 50% 50%;
 	background-size: cover;
 }
 .rating label {
@@ -2813,7 +2813,7 @@ a:hover {
 	text-indent: 10em;
 	white-space: nowrap;
 	cursor: pointer;
-	background: transparent url(./../images/icons/icon-star.svg) no-repeat 50% 50%;
+	background: transparent url(../images/icons/icon-star.svg) no-repeat 50% 50%;
 	background-size: cover;
 }
 .rating label:not(:first-of-type) {
