--- a/new/css/styles.css
+++ b/new/css/styles.css
@@ -297,18 +297,42 @@ body {
 	font-family: 'Raleway', Helvetica, sans-serif;
 	line-height: 1.4;
 	font-weight: 400;
-	color: #333;
+	color: #666;
 }
 
 /* Fonts */
 /* Typography */
 a {
 	text-decoration: none;
-	color: #f00;
-	transition: color .2s linear,	background-color .2s linear,	border-color .2s linear;
+	color: #0070c9;
+	transition: color .15s ease,	background-color .15s ease,	border-color .15s ease;
 }
 a:hover {
-	color: #00f;
+	color: #ff3b30;
+}
+
+.section__title {
+	position: relative;
+	margin-bottom: .938em;
+	font-size: 2rem;
+	line-height: 1.2;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-align: center;
+}
+.section__title:after {
+	content: '';
+	position: absolute;
+	bottom: -.25em;
+	left: 50%;
+	width: 3em;
+	height: 2px;
+	background-color: #666; 
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
+}
+.section__title.section__title--light:after {
+	background-color: #fff;
 }
 
 .content h1,
@@ -1893,34 +1917,252 @@ a:hover {
 
 /* Grid */
 .main {
+	position: relative;
+	z-index: 1100;
 	overflow: hidden;
-	padding-bottom: 5rem; 
-	min-height: 100%;
+	margin-bottom: 25rem;
+	background-color: #f7f7f7;
+	box-shadow: 0 5px 50px rgba(0, 0, 0, .4);
+}
+
+.section {
+	padding: 2.5em 0;
+}
+.section.section-white {
+	background-color: #fff;
 }
 
 /* Page header */
 .page-header {
-	background: #d7d7d7;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2000;
+	display: none;
+	min-height: 5em;
+	width: 100%;
+	background-color: rgba(215, 215, 215, .8);
 }
 
 /* Sidebar */
 /* Page footer */
 .page-footer {
-	margin-top: -5rem;
-	height: 5rem;
-	background: #d7d7d7;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 25rem;
+	color: #fff;
+	background-color: #d7d7d7;
+	background-position: 50% 100%;
+	background-size: cover; 
+	background-repeat: no-repeat;
+}
+.page-footer:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .2);
+}
+
+.page-footer-content {
+	position: relative;
+	z-index: 1000;
+}
+
+.page-footer__title {
+	margin-bottom: 1.5625em;
+}
+
+.page-footer__contact {
+	margin: 0 auto;
+	max-width: 100%;
+	border-radius: 5px;
+	color: #fff;
+	background-color: rgba(102, 102, 102, .4);
+	box-shadow: 0 4px 50px rgba(0, 0, 0, .3);
+}
+
+.page-footer__contact-row {
+	border-top: 1px solid rgba(215, 215, 215, .2);
+}
+.page-footer__contact-row:first-child {
+	border: 0;
+}
+
+.page-footer__contact-col {
+	padding: .625em 1.25em;
+	white-space: nowrap;
+}
+
+.page-footer__contact-item {
+	margin-left: .625em;
+	font-weight: 700;
+}
+
+.page-footer__contact-icon {
+	vertical-align: bottom; 
+	width: 1.4em;
+}
+
+.page-footer__contact-link {
+	color: #fff;
 }
 
 /* Home page */
-.project {
+.section__info {
 	margin-bottom: 1.25em;
+}
+
+.hero {
+	position: relative;
+	z-index: 1500;
+	height: 100%;
+	color: #fff;
+	background-color: #d7d7d7;
+	background-attachment: fixed; 
+	background-position: 50% 0;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.hero:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .3);
+}
+
+.hero-content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 1600;
+	color: #fff; 
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+}
+
+.hero__title {
+	padding: .41667em .625em;
+	border: 4px solid #d7d7d7;
+	font-size: 3rem;
+	line-height: 1.1;
+	text-align: center;
+	transition: opacity .5s ease-in;
+}
+.hero__title.hero__title--hidden {
+	opacity: 0;
+	transition: opacity .5s ease-out;
+}
+
+.hero__title-description {
+	position: relative;
+	display: block;
+	margin-top: 1em;
+	font-size: .625em;
+	text-align: center;
+}
+.hero__title-description:after {
+	content: '';
+	position: absolute;
+	top: -.5em;
+	left: 50%;
+	width: 50%;
+	height: 2px;
+	background-color: #d7d7d7;
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
+}
+
+.about__text {
+	margin-bottom: 1.25em;
+	line-height: 1.5;
+}
+
+.about__photo {
+	float: right;
+	margin: 0 0 1.875em 1.875em;
+	max-width: 20em;
+	border: .625em solid #d7d7d7;
+	border-radius: .625em;
+	box-shadow: -2px 2px 2px rgba(0, 0, 0, .2);
+}
+
+.projects__info {
+	margin: 0 auto 1.875em;
+	max-width: 50em;
+	text-align: center;
+}
+
+.project {
+	position: relative;
+	margin-bottom: 1.25em;
+	border: 1px solid #d7d7d7;
+	background-color: #fff;
+	box-shadow: 0 1px 10px rgba(0, 0, 0, .05);
 }
 
 .project-image {
 	height: 12.5em;
+	border-bottom: 1px solid #d7d7d7;
 	background-position: 50% 0;
 	background-size: cover; 
 	background-repeat: no-repeat;
+}
+
+.project-info {
+	overflow: hidden;
+	padding: .625em;
+	height: 13.125em;
+	background-color: #fff;
+}
+
+.project__title {
+	margin: .556em 0 .833em;
+	font-size: 1.125rem;
+	font-weight: 700;
+}
+
+.project__description {
+	margin-bottom: 1.429em;
+	font-size: .875rem;
+}
+
+.project-links-container {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	padding: 0 .625em;
+	width: 100%;
+	background-color: #fff;
+}
+
+.project-links {
+	padding: .625em 0;
+	border-top: 1px solid #d7d7d7;
+}
+
+.project__link {
+	display: inline-block;
+	vertical-align: middle;
+	padding: .313em 1.25em;
+	border: 1px solid #008cfc;
+	border-radius: 3px;
+	text-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
+	color: #fff;
+	background-color: #0070c9;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+}
+.project__link:hover {
+	border-color: #ff6b63;
+	color: #fff;
+	background-color: #ff3b30;
 }
 
 /* forms */
@@ -1962,9 +2204,39 @@ a:hover {
 }
 
 /* Media queries */
-@media screen and (max-width: 27rem) {
+@media screen and (max-width: 1024px) {
+	.page-footer__contact {
+		background-color: rgba(102, 102, 102, .6);
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.about__photo {
+		width: 45%;
+	}
+}
+
+@media screen and (max-width: 30rem) {
+	html {
+		font-size: 15px;
+	}
 	[class*=mobile-grid-50] {
 		width: 100%;
+	}
+	.hero__title {
+		border: 0;
+	}
+	.about__photo {
+		float: none;
+		display: block;
+		margin: 0 auto 1.875em;
+		width: 100%;
+	}
+	.page-footer__contact-col {
+		padding: .66667em;
+	}
+	.page-footer__contact-item {
+		display: none;
 	}
 }
 
