--- a/layout/scripts.html
+++ b/layout/scripts.html
@@ -1,3 +1,4 @@
 <!-- <script src="./js/jquery.js"></script> -->
 <!-- <script src="./js/library.js"></script> -->
 <script src="./js/main.js"></script>
+<script src="./js/ga.js"></script>
